deploy/kubernetes/gatewatch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatewatch-api-security-console
spec:
  type: ClusterIP
  selector:
    app: gatewatch
  ports:
    - name: http
      port: 80
      targetPort: 8080
